--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,19 +7,19 @@
     <string name="new_game">重新开始</string>
     <string name="start_game">开始游戏</string>
     <string name="start_charts">排行榜</string>
+    <string name="game_info">游戏攻略</string>
     <string name="context_menu">Context menu</string>
     <string name="time">游戏时间</string>
     <!--菜单字符串-->
     <string name="menu_charts">我要看榜</string>
     <string name="menu_exit">退出游戏</string>
-    <string name="menu_info">关于作者</string>
+    <string name="menu_info">游戏攻略</string>
     <string name="menu_restart">重新开始</string>
-    <string name="menu_tutorial">攻略教程</string>
 
     <!--Info 字符串 -->
-    <string name="info_name">hdt</string>
-    <string name="info_mail">111</string>
-
+    <string name="info_name">2048游戏玩法攻略</string>
+    <string name="info">2048游戏的规则很简单：每次控制所有方块向同一个方向运动，两个相同数字的方块撞在一起之后合并成为他们的和，每次操作之后会在空白的方格处随机生成一个2或者4，最终得到一个“2048”的方块就算胜利了。如果16个格子全部填满并且相邻的格子都不相同也就是无法移动的话，那么游戏就会结束。
+　　最大数和次大数在的那一列/行是满的。高分法则：最大数尽可能放在角落。数字按顺序紧邻排列。首先满足最大数和次大数在的那一列/行是满的。时刻注意活动较大数(32以上)旁边要有相近的数。以大数所在的一行为主要移动方向，不要急于“清理桌面”。需要注意的是，为了保持最大数在角落，所有最大数可能移动的方向都不能再操作了，比如选择了左上角，那么就不能向右和向下移动其他的方块，这样操作的灵活性会相对减少，难度就会增加。这时，建议玩家除了选定一个角以外，再固定一条边，将大的数字放这条边上，这样就可以朝三个方向移动，比如选定左上角，填满最大数右边的所有方块，就可以朝上，左，右三个方向移动了。</string>
     <!-- dialog 字符串 -->
     <string name="dialog_hint">您的姓名</string>
     <string name="dialog_title">游戏结束。恭喜您，您的分数可进入排行榜</string>
